[project]
name = "api-lab"
version = "0.1.0"
description = "API and web scraping project for Ironhack bootcamp"
authors = [
    {name = "Chandler Shortlidge",email = "chandlershortlidge@gmail.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spotipy (>=2.25.1,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "python-dotenv==1.1.1",
    "ipykernel==6.29.5"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 